# quasim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark.py  main.py  pyproject.toml  requirements.txt  run_benchmarking.py
benchmark/: __init__.py  requirements.txt  result_benchmark.py  time_benchmark.py  utils.py
quasim/: __init__.py  circuit.py  simulator.py  utils.py
quasim/gates/: __init__.py  _matrices.py  controlled_gates.py  double_controlled_gates.py  interface.py  single_qubit_gates.py  swap.py  utils.py
quasimp/: __init__.py  circuit.py  simulator.py  utils.py
quasimp/gates/: __init__.py  _utils.py  ccx.py  ccz.py  ch.py  cnot.py  crx.py  cry.py  crz.py  cx.py  cy.py  cz.py  gate.py  h.py  phase.py  rx.py  ry.py  rz.py  swap.py  utils.py  x.py  y.py  z.py
quasimp2/: __init__.py  circuit.py  simulator.py  utils.py
quasimp2/gates/: __init__.py  controlled_gates.py  double_controlled_gates.py  single_qubit_gates.py  swap.py
